Fixed image causing y-overflow

--- a/Open-MediaServer/Frontend/Assets/css/Account/Account.css
+++ b/Open-MediaServer/Frontend/Assets/css/Account/Account.css
@@ -90,9 +90,11 @@
 
 .media-element {
     display: flex;
+    height: 100%;
 }
 
 .media-element-text {
+    display: inline-block;
     font-family: 'Lato', sans-serif;
     font-size: 12px;
     color: white;
@@ -100,8 +102,8 @@
 }
 
 .media-img-item {
-    width: 150px;
-    height: 88px;
+    width: 55%;
+    height: 100%;
 }
 
 .media-no-img-item {
